--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 		<link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
 		<link rel="stylesheet" href="./css/globals.css" />
 		<link rel="stylesheet" href="./css/index.css" />
-		<title>Rot</title>
+		<title>ROT</title>
 	</head>
 	<body>
 		<header>
 			<div>
-				<a href="/index.html" class="brand-link">
+				<a href="index.html" class="brand-link">
 					<h1 class="brand">
 						<span class="rot">ROT</span> <span>Generator</span>
 					</h1>
@@ -36,7 +36,7 @@
 					>
 				</p>
 			</div>
-			<a href="/about.html" class="about-link">About</a>
+			<a href="about.html" class="about-link">About</a>
 		</header>
 		<main>
 			<section class="main-section">
