--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 		<link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
 		<link rel="stylesheet" href="./css/globals.css" />
 		<link rel="stylesheet" href="./css/about.css" />
-		<title>Rot</title>
+		<title>ROT</title>
 	</head>
 	<body>
 		<header>
