--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<body>
 		<header>
 			<div>
-				<a href="/index.html" class="brand-link">
+				<a href="index.html" class="brand-link">
 					<h1 class="brand">
 						<span class="rot">ROT</span> <span>Generator</span>
 					</h1>
