--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 	<body>
 		<header>
 			<div>
-				<a href="/index.html" class="brand-link">
+				<a href="index.html" class="brand-link">
 					<h1 class="brand">ROT Generator</h1>
 				</a>
 				<p class="author">
@@ -34,7 +34,7 @@
 					>
 				</p>
 			</div>
-			<a href="/about.html" class="about-link">About</a>
+			<a href="about.html" class="about-link">About</a>
 		</header>
 		<main>
 			<div class="container">
