--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					>
 				</p>
 			</div>
-			<a href="/about.html" class="about-link">About</a>
+			<a href="about.html" class="about-link">About</a>
 		</header>
 		<main>
 			<section class="main-section">
