--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
 				<div class="container">
 					<form>
 						<div class="controls">
-							<div class="input-group--row contro">
-								<select name="algo" id="algo">
-									<option value="rot1">ROT1</option>
-									<option value="rot2">ROT2</option>
-									<option value="rot3">ROT3</option>
-									<option value="rot4">ROT4</option>
-									<option value="rot5">ROT5</option>
-									<option value="rot6">ROT6</option>
-									<option value="rot7">ROT7</option>
-									<option value="rot8">ROT8</option>
-									<option value="rot9">ROT9</option>
-									<option value="rot10">ROT10</option>
-									<option value="rot11">ROT11</option>
-									<option value="rot12">ROT12</option>
-									<option value="rot13">ROT13</option>
-								</select>
-							</div>
-							<div class="input-group--row">
-								<select name="type" id="type">
-									<option value="forwards">Forwards</option>
-									<option value="backwards">Backwards</option>
-								</select>
+							<select name="algo" id="algo">
+								<option value="rot1">ROT1</option>
+								<option value="rot2">ROT2</option>
+								<option value="rot3">ROT3</option>
+								<option value="rot4">ROT4</option>
+								<option value="rot5">ROT5</option>
+								<option value="rot6">ROT6</option>
+								<option value="rot7">ROT7</option>
+								<option value="rot8">ROT8</option>
+								<option value="rot9">ROT9</option>
+								<option value="rot10">ROT10</option>
+								<option value="rot11">ROT11</option>
+								<option value="rot12">ROT12</option>
+								<option value="rot13">ROT13</option>
+							</select>
+							<select name="type" id="type">
+								<option value="forwards">Forwards</option>
+								<option value="backwards">Backwards</option>
+							</select>
+							<div class="checkbox-wrapper">
+								<input type="checkbox" id="trim" name="trim" />
+								<label for="trim"> Trim Whitespace </label>
 							</div>
 						</div>
 						<div class="input-group text-input-wrapper">
