--- a/index.html
+++ b/index.html
@@ -26,17 +26,7 @@
 						<span class="rot">ROT</span> <span>Generator</span>
 					</h1>
 				</a>
-				<p class="author">
-					by
-					<a
-						href="https://evankapantais.com"
-						target="_blank"
-						rel="noopener noreferrer"
-						>Evan Kapantais</a
-					>
-				</p>
 			</div>
-			<a href="about.html" class="about-link">About</a>
 		</header>
 		<main>
 			<section class="main-section">
@@ -86,6 +76,38 @@
 				</div>
 			</section>
 		</main>
+		<footer>
+			<p class="author">
+				Created by
+				<a
+					href="https://evankapantais.com"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Evan Kapantais</a
+				>
+			</p>
+			<ul>
+				<li>
+					<a href="about.html">About</a>
+				</li>
+				<li>
+					<a
+						href="https://github.com/evan-kapantais/rot-generator"
+						target="_blank"
+						rel="noopener noreferrer"
+						>Github</a
+					>
+				</li>
+				<li>
+					<a
+						href="https://github.com/evan-kapantais/rot-generator/issues"
+						target="_blank"
+						rel="noopener noreferrer"
+						>Submit an Issue</a
+					>
+				</li>
+			</ul>
+		</footer>
 		<script src="main.js"></script>
 	</body>
 </html>
