--- a/about.html
+++ b/about.html
@@ -24,17 +24,7 @@
 				<a href="index.html" class="brand-link">
 					<h1 class="brand">ROT Generator</h1>
 				</a>
-				<p class="author">
-					by
-					<a
-						href="https://evankapantais.com"
-						target="_blank"
-						rel="noopener noreferrer"
-						>Evan Kapantais</a
-					>
-				</p>
 			</div>
-			<a href="about.html" class="about-link">About</a>
 		</header>
 		<main>
 			<div class="container">
@@ -94,6 +84,37 @@
 				</section>
 			</div>
 		</main>
-		<script src="main.js"></script>
+		<footer>
+			<p class="author">
+				Created by
+				<a
+					href="https://evankapantais.com"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Evan Kapantais</a
+				>
+			</p>
+			<ul>
+				<li>
+					<a href="about.html">About</a>
+				</li>
+				<li>
+					<a
+						href="https://github.com/evan-kapantais/rot-generator"
+						target="_blank"
+						rel="noopener noreferrer"
+						>Github</a
+					>
+				</li>
+				<li>
+					<a
+						href="https://github.com/evan-kapantais/rot-generator/issues"
+						target="_blank"
+						rel="noopener noreferrer"
+						>Submit an Issue</a
+					>
+				</li>
+			</ul>
+		</footer>
 	</body>
 </html>
