reposition coffee widget

--- a/about.html
+++ b/about.html
@@ -1,3 +1,5 @@
+<!-- TODO: coffee link -->
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -46,20 +48,6 @@
 							rel="noreferrer"
 							>Submit an Issue</a
 						>
-					</li>
-					<li>
-						<script
-							data-name="BMC-Widget"
-							data-cfasync="false"
-							src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
-							data-id="evankapantais"
-							data-description="Support me on Buy me a coffee!"
-							data-message=""
-							data-color="#FFDD00"
-							data-position="Right"
-							data-x_margin="32"
-							data-y_margin="32"
-						></script>
 					</li>
 				</ul>
 			</nav>
@@ -117,13 +105,22 @@
 		<footer>
 			<p class="author">
 				Created by
-				<a
-					href="https://evankapantais.com"
-					target="_blank"
-					rel="noopener noreferrer"
+				<a href="https://evankapantais.com" target="_blank" rel="noreferrer"
 					>Evan Kapantais</a
 				>
 			</p>
+			<script
+				data-name="BMC-Widget"
+				data-cfasync="false"
+				src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+				data-id="evankapantais"
+				data-description="Support me on Buy me a coffee!"
+				data-message=""
+				data-color="#FFDD00"
+				data-position="Right"
+				data-x_margin="32"
+				data-y_margin="32"
+			></script>
 		</footer>
 	</body>
 </html>
