--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- TODO: coffee link -->
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -47,20 +49,6 @@
 							>Submit an Issue</a
 						>
 					</li>
-					<li>
-						<script
-							data-name="BMC-Widget"
-							data-cfasync="false"
-							src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
-							data-id="evankapantais"
-							data-description="Support me on Buy me a coffee!"
-							data-message=""
-							data-color="#FFDD00"
-							data-position="Right"
-							data-x_margin="32"
-							data-y_margin="32"
-						></script>
-					</li>
 				</ul>
 			</nav>
 		</header>
@@ -71,7 +59,6 @@
 			<section class="strings-list">
 				<h2>
 					Saved
-
 					<button type="button" class="download-button">
 						<img class="icon" src="./images/download.svg" alt="download" />
 					</button>
@@ -169,6 +156,18 @@
 					</div>
 				</fieldset>
 			</form>
+			<script
+				data-name="BMC-Widget"
+				data-cfasync="false"
+				src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+				data-id="evankapantais"
+				data-description="Support me on Buy me a coffee!"
+				data-message=""
+				data-color="#FFDD00"
+				data-position="Right"
+				data-x_margin="32"
+				data-y_margin="32"
+			></script>
 		</footer>
 		<script type="module" src="main.js"></script>
 	</body>
